EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------

==01/16/2009
Derision: Implemented voice macros (CTRL-V). Update your opcodes.
Derision: Food and drink should no longer be auto-consumed in the Bazaar
Derision: Added rule Spells:TranslocateTimeLimit. If >0, translocate must be accepted within this number of seconds.

Optional SQL: (Required to enable voice macro use on your server

REPLACE INTO `rule_values` VALUES (0, 'Chat:EnableVoiceMacros', 'true');

==01/14/2009
Derision: Fixed makefile references for rulesys.o
Derision: Mapped field in LogServer_Struct to allow voice macro window to be opened (needs work on Opcodes to make it functional).

==01/12/2009
Derision: Removed code that stole all your money if you logged on with more than 1 million of any denomination of coin on your person.

==01/11/2009
Angelox: Bots: Added rule 'EQOffline:BotCount' defaults to 5, for desired amount of bots in the group - values are 0-5 (0 means bots are disabled, max limit is 5). 
Derision: Mail/Chatchannels: Added sanity check on packet size in EQPacket::ChatDecode.
Derision: Mail/Chatchannels: Increased stream timeout from 45 to 135 seconds.
Derision: Mail: Use correct opcodes for sending Headers.  **utils/mail_opcodes.conf updated**
Derision: Chatchannels: Recognise and ignore AFK command.
Derision: Chatchannels: Added uptime command (usage ;uptime or /chat uptime).
Congdar: Bots: Added Lore item check to command #bot inventory remove

==01/08/2009
Congdar: Bots: Fix compile issue under linux for Visible Gear update.

Angelox: Bots: Updated required SQL, utils/sql/svn/250_bot_spell_update.sql (some spells were still being auto-casted)
Derision: Chatserver: Fix for crash when multiple connections are made in quick succession.

==01/07/2009