@@ -1,6 +1,9 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
 
+==01/17/2009
+Derision: Fixed several cases of integer overflow relating to moving large amounts of money around.
+
 ==01/16/2009
 Derision: Implemented voice macros (CTRL-V). Update your opcodes.
 Derision: Food and drink should no longer be auto-consumed in the Bazaar
